fix z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1255,7 +1255,7 @@
 
 /* Nút buy */
 .buy-wrap {
-    z-index: 10;
+    z-index: 4;
     position: fixed;
     bottom: 20px;
     right: 17px;
